[change] filter > oval-fill  [add] oval-outline story

--- a/stories/DataDisplay/Chip.stories.mdx
+++ b/stories/DataDisplay/Chip.stories.mdx
@@ -24,7 +24,7 @@ import Chip, { ChipColors, ChipSizes } from '@/src/Components/DataDisplay/Chip';
             defaultValue: "fill",
             control: {
                 type: "select",
-                options: ["fill" ,"outlined" ,"filter","oval-outline"],
+                options: ["fill" ,"outlined" ,"oval-fill","oval-outline"],
             },
         },
         color: {
@@ -90,10 +90,15 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="secondary" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="secondary" size="small">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
+                  <hr>
+                  <Chip type="oval-outline" color="secondary" size="small">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
                   <Chip type="fill" color="primary" size="small">Chip</Chip>
                   <Chip type="fill" color="primary" size="medium" class="ml-4">Chip</Chip>
@@ -105,10 +110,15 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="primary" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="primary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="primary" size="small">Chip</Chip>
-                  <Chip type="filter" color="primary" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="primary" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="primary" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="xlarge" class="ml-4">Chip</Chip>
+                  <hr>
+                  <Chip type="oval-outline" color="primary" size="small">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
                   <Chip type="fill" color="success" size="small">Chip</Chip>
                   <Chip type="fill" color="success" size="medium" class="ml-4">Chip</Chip>
@@ -120,10 +130,10 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="success" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="success" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="success" size="small">Chip</Chip>
-                  <Chip type="filter" color="success" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="success" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="success" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
                   <Chip type="oval-outline" color="success" size="small">Chip</Chip>
                   <Chip type="oval-outline" color="success" size="medium" class="ml-4">Chip</Chip>
