--- a/stories/DataDisplay/Chip.stories.mdx
+++ b/stories/DataDisplay/Chip.stories.mdx
@@ -24,7 +24,7 @@ import Chip, { ChipColors, ChipSizes } from '@/src/Components/DataDisplay/Chip';
             defaultValue: "fill",
             control: {
                 type: "select",
-                options: ["fill" ,"outlined" ,"filter"],
+                options: ["fill" ,"outlined" ,"oval-fill","oval-outline"],
             },
         },
         color: {
@@ -52,6 +52,11 @@ import Chip, { ChipColors, ChipSizes } from '@/src/Components/DataDisplay/Chip';
               },
               defaultValue: null,
         },
+        isHover: {
+            description: "Chip hover 활성화",
+            defaultValue: false,
+            control: { type: "boolean" },
+        },
     }}
 />
 
@@ -59,7 +64,7 @@ export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { Chip },
     template:
-        `<Chip :type="type"  :size="size" :color="color" :full="full" :paddings="paddings"> {{text}}</Chip>`,
+        `<Chip :type="type"  :size="size" :color="color" :full="full" :paddings="paddings" :isHover="isHover"> {{text}}</Chip>`,
 });
 
 # Chip
@@ -90,10 +95,15 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="secondary" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="secondary" size="small">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
+                  <hr>
+                  <Chip type="oval-outline" color="secondary" size="small">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="secondary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
                   <Chip type="fill" color="primary" size="small">Chip</Chip>
                   <Chip type="fill" color="primary" size="medium" class="ml-4">Chip</Chip>
@@ -105,10 +115,15 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="primary" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="primary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="primary" size="small">Chip</Chip>
-                  <Chip type="filter" color="primary" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="primary" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="primary" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="primary" size="xlarge" class="ml-4">Chip</Chip>
+                  <hr>
+                  <Chip type="oval-outline" color="primary" size="small">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="primary" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
                   <Chip type="fill" color="success" size="small">Chip</Chip>
                   <Chip type="fill" color="success" size="medium" class="ml-4">Chip</Chip>
@@ -120,10 +135,15 @@ export const Basic = (args, { argTypes }) => ({
                   <Chip type="outlined" color="success" size="large" class="ml-4">Chip</Chip>
                   <Chip type="outlined" color="success" size="xlarge" class="ml-4">Chip</Chip>
                   <hr>
-                  <Chip type="filter" color="success" size="small">Chip</Chip>
-                  <Chip type="filter" color="success" size="medium" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="success" size="large" class="ml-4">Chip</Chip>
-                  <Chip type="filter" color="success" size="xlarge" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="small">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-fill" color="success" size="xlarge" class="ml-4">Chip</Chip>
+                  <hr>
+                  <Chip type="oval-outline" color="success" size="small">Chip</Chip>
+                  <Chip type="oval-outline" color="success" size="medium" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="success" size="large" class="ml-4">Chip</Chip>
+                  <Chip type="oval-outline" color="success" size="xlarge" class="ml-4">Chip</Chip>
                 </div>
         `,
             components: { Chip },
