--- a/stories/DataDisplay/Chip.stories.mdx
+++ b/stories/DataDisplay/Chip.stories.mdx
@@ -57,6 +57,11 @@ import Chip, { ChipColors, ChipSizes } from '@/src/Components/DataDisplay/Chip';
             defaultValue: false,
             control: { type: "boolean" },
         },
+        transparent: {
+            description: "outline transparent",
+            defaultValue: false,
+            control: { type: "boolean" },
+        },
     }}
 />
 
@@ -64,7 +69,7 @@ export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { Chip },
     template:
-        `<Chip :type="type"  :size="size" :color="color" :full="full" :paddings="paddings" :isHover="isHover"> {{text}}</Chip>`,
+        `<Chip :type="type"  :size="size" :color="color" :full="full" :paddings="paddings" :isHover="isHover" :transparent="transparent"> {{text}}</Chip>`,
 });
 
 # Chip
