[add] @click-slide 문서 추가

--- a/stories/DataDisplay/Swiper/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper/Swiper.stories.mdx
@@ -117,7 +117,8 @@ export const Default = (args, { argTypes }) => ({
 
 # Swiper
 
-**Swiper** 컴포넌트의 문서입니다.
+**Swiper** 컴포넌트의 문서입니다.<br/>
+loop모드 사용시 event listener는 @click-slide로 전달합니다.
 
 <Story name="Default" height="100px">
     {Default.bind({})}
