--- a/stories/Components/Message/Popover.stories.mdx
+++ b/stories/Components/Message/Popover.stories.mdx
@@ -3,6 +3,9 @@ import Popover, { placements } from "@/src/Components/Message/Popover";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 import Icon from "@/src/Elements/Core/Icon/Icon";
 import Button from "@/src/Components/Button/Button";
+import NewGrid from "@/src/Components/Layout/NewGrid";
+import NewRow from "@/src/Components/Layout/NewRow";
+import NewCol from "@/src/Components/Layout/NewCol";
 
 <Meta
   title="Message/Popover"
@@ -64,56 +67,110 @@ export const Default = (args, { argTypes }) => ({
     <Story name="All" height="300px">
         {{
             template: `
-            <div>
-                <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
-                    <Popover placement="bottom-right" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-right</div>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom</div>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom-left" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-left</div>
-                            </template>
-                    </Popover>
-                </div>
-                <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
-                    <Popover placement="bottom-right" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <Typography type="body2">Title</Typography>
-                                <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>button</Button>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <Typography type="body2">Title</Typography>
-                                <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>button</Button>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom-left" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <Typography type="body2">Title</Typography>
-                                <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>button</Button>
-                            </template>
-                    </Popover>
-                </div>
-            </div>
-        `,
-          components: { Popover, Icon, Typography, Button },
+                <NewGrid>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 120px">
+                            <Popover placement="bottom-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-right</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-left</div>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 150px">
+                            <Popover placement="bottom-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow class="mt-40">
+                        <NewCol class="flex flex-row justify-around" style="height: 40px">
+                            <Popover placement="right-top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-top</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right-bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-bottom</div>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow class="mt-80">
+                        <NewCol class="flex flex-row justify-around" style="height: 110px">
+                            <Popover placement="right-top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right-bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <Typography type="body2">Title</Typography>
+                                        <Typography type="caption1" color="gray800">content</Typography>
+                                        <Button>button</Button>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                </NewGrid>
+            `,
+            components: { Popover, Icon, Typography, Button, NewGrid, NewRow, NewCol },
         }}
     </Story>
 </Canvas>
@@ -123,30 +180,54 @@ export const Default = (args, { argTypes }) => ({
     <Story name="Position" height="100px">
         {{
             template: `
-                <div>
-                    <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
-                        <Popover placement="bottom-right" :open="true">
-                            <Icon name="IconProfileLargeFill"></Icon>
-                                <template v-slot:popover>
-                                    <div>bottom-right</div>
-                                </template>
-                        </Popover>
-                        <Popover placement="bottom" :open="true">
-                            <Icon name="IconProfileLargeFill"></Icon>
-                                <template v-slot:popover>
-                                    <div>bottom</div>
-                                </template>
-                        </Popover>
-                        <Popover placement="bottom-left" :open="true">
-                            <Icon name="IconProfileLargeFill"></Icon>
-                                <template v-slot:popover>
-                                    <div>bottom-left</div>
-                                </template>
-                        </Popover>
-                     </div>
-                 </div>
-        `,
-          components: { Popover, Icon, Typography, Button },
+                <NewGrid>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 60px">
+                            <Popover placement="bottom-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-right</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="bottom-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-left</div>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow class="mt-40">
+                        <NewCol class="flex flex-row justify-around" style="height: 40px">
+                            <Popover placement="right-top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-top</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right</div>
+                                    </template>
+                            </Popover>
+                            <Popover placement="right-bottom" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-bottom</div>
+                                    </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                </NewGrid>
+            `,
+            components: { Popover, Icon, Typography, Button, NewGrid, NewRow, NewCol },
         }}
     </Story>
 </Canvas>
@@ -174,6 +255,14 @@ export const Default = (args, { argTypes }) => ({
                             </template>
                     </Popover>
                     <Popover placement="bottom-left" :open="true">
+                        <Icon name="IconProfileLargeFill"></Icon>
+                            <template v-slot:popover>
+                                <Typography type="body2">Title</Typography>
+                                <Typography type="caption1" color="gray800">content</Typography>
+                                <Button>button</Button>
+                            </template>
+                    </Popover>
+                    <Popover placement="right" :open="true">
                         <Icon name="IconProfileLargeFill"></Icon>
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
