--- a/stories/Components/Message/Tooltip.stories.mdx
+++ b/stories/Components/Message/Tooltip.stories.mdx
@@ -1,6 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Tooltip, { placements } from "@/src/Components/Message/Tooltip";
 import Icon from "@/src/Elements/Core/Icon/Icon";
+import NewGrid from "@/src/Components/Layout/NewGrid";
+import NewRow from "@/src/Components/Layout/NewRow";
+import NewCol from "@/src/Components/Layout/NewCol";
 
 <Meta
   title="Message/Tooltip"
@@ -63,28 +66,54 @@ export const Default = (args, { argTypes }) => ({
     <Story name="All" height="100px">
         {{
             template: `
-                <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
-                    <Tooltip placement="bottom-right" open>
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-right</div>
-                            </template>
-                    </Tooltip>
-                    <Tooltip placement="bottom" open>
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom</div>
-                            </template>
-                    </Tooltip>
-                    <Tooltip placement="bottom-left" open>
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-left</div>
-                            </template>
-                    </Tooltip>
-                 </div>
-        `,
-          components: { Tooltip, Icon },
+                <NewGrid>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 120px">
+                            <Tooltip placement="bottom-right" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-right</div>
+                                    </template>
+                            </Tooltip>
+                            <Tooltip placement="bottom" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom</div>
+                                    </template>
+                            </Tooltip>
+                            <Tooltip placement="bottom-left" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>bottom-left</div>
+                                    </template>
+                            </Tooltip>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 40px">
+                            <Tooltip placement="right-top" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-top</div>
+                                    </template>
+                            </Tooltip>
+                            <Tooltip placement="right" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right</div>
+                                    </template>
+                            </Tooltip>
+                            <Tooltip placement="right-bottom" open>
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                    <template v-slot:popover>
+                                        <div>right-bottom</div>
+                                    </template>
+                            </Tooltip>
+                        </NewCol>
+                    </NewRow>
+                </NewGrid>
+          `,
+          components: { NewGrid, NewRow, NewCol, Tooltip, Icon },
         }}
     </Story>
 </Canvas>
