--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -125,6 +125,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconSupportMediumLine></IconWrapper>
                             <IconWrapper name=IconStarMediumFill color="gray400"></IconWrapper>
                             <IconWrapper name=IconMegaphoneMediumLine></IconWrapper>
+                            <IconWrapper name=IconMinusMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
