[change] list 폴더 구조 변경

--- a/stories/DataDisplay/List/List/ListItem.stories.mdx
+++ b/stories/DataDisplay/List/List/ListItem.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import ListItem, { ListItemSizes, ListItemCursors } from "@/src/Components/DataDisplay/ListItem";
+import ListItem, { ListItemSizes, ListItemCursors } from "@/src/Components/DataDisplay/List/List/ListItem";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 
 <Meta
-    title="Data Display/ListItem"
+    title="Data Display/List/List/ListItem"
     component={ ListItem }
     argTypes={{
         label: {
