--- a/stories/DataDisplay/List/List/List.stories.mdx
+++ b/stories/DataDisplay/List/List/List.stories.mdx
@@ -1,12 +1,12 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import ListItem from "@/src/Components/DataDisplay/ListItem";
-import List from "@/src/Components/DataDisplay/List";
+import ListItem from "@/src/Components/DataDisplay/List/List/ListItem";
+import List from "@/src/Components/DataDisplay/List/List/List";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 import Divider from "@/src/Elements/Utility/Divider";
 import Icon from '@/src/Elements/Core/Icon/Icon';
 
 <Meta
-    title="Data Display/List"
+    title="Data Display/List/List/List"
     component={ List }
     argTypes={{
         listItems: {
