--- a/stories/DataDisplay/Swiper/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper/Swiper.stories.mdx
@@ -98,6 +98,12 @@ import SwiperItemExample from "./SwiperItemExample";
                 type: "number",
             },
         },
+        loop: {
+            description: "loop 여부",
+            control: {
+                type: "boolean",
+            },
+        },
     }}
 />
 
@@ -106,7 +112,7 @@ export const Default = (args, { argTypes }) => ({
     components: { Swiper, SwiperItemExample },
     template: `
         <div style="padding: 12px 32px;">
-            <Swiper :with-controls="withControls" :controls-position="controlsPosition" :controls-color="controlsColor" :controls-circle="controlsCircle" :with-indicator="withIndicator" :indicator-position="indicatorPosition" :indicator-color="indicatorColor" :centeredSlides="centeredSlides" :spacing="spacing" :slides-per-view="slidesPerView" :slides-per-group="slidesPerGroup" :autoplay="autoplay" :autoplay-delay="autoplayDelay">
+            <Swiper :with-controls="withControls" :controls-position="controlsPosition" :controls-color="controlsColor" :controls-circle="controlsCircle" :with-indicator="withIndicator" :indicator-position="indicatorPosition" :indicator-color="indicatorColor" :centeredSlides="centeredSlides" :spacing="spacing" :slides-per-view="slidesPerView" :slides-per-group="slidesPerGroup" :autoplay="autoplay" :autoplay-delay="autoplayDelay" :loop="loop">
                 <template v-for="(item, index) in 10" :slot="'item' + index">
                 <SwiperItemExample :text="'ITEM' + (index+1)" ></SwiperItemExample>
                 </template>
