--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -80,6 +80,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name="IconQuestionMarkSmallFill"></IconWrapper>
                             <IconWrapper name="IconFileSmallLine"></IconWrapper>
                             <IconWrapper name="IconStarSmallFill" color="gray400"></IconWrapper>
+                            <IconWrapper name="IconMegaphoneSmallLine"></IconWrapper>
                         </div>
                     </div>
                     <!--medium-->
