--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -123,10 +123,12 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconDownloadMediumLine></IconWrapper>
                             <IconWrapper name=IconExportMediumLine></IconWrapper>
                             <IconWrapper name=IconClockMediumFill></IconWrapper>
+                            <IconWrapper name=IconClockMediumLine></IconWrapper>
                             <IconWrapper name=IconSupportMediumLine></IconWrapper>
                             <IconWrapper name=IconStarMediumFill color="gray400"></IconWrapper>
                             <IconWrapper name=IconMegaphoneMediumLine></IconWrapper>
                             <IconWrapper name=IconMinusMediumLine></IconWrapper>
+                            <IconWrapper name=IconDiscountMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
@@ -162,6 +164,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconResumeLargeLine></IconWrapper>
                             <IconWrapper name=IconQuestionLargeLine></IconWrapper>
                             <IconWrapper name=IconVideoLargeFill></IconWrapper>
+                            <IconWrapper name=IconStarLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--x-large-->
