[add] link icon

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -81,6 +81,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name="IconFileSmallLine"></IconWrapper>
                             <IconWrapper name="IconStarSmallFill" color="gray400"></IconWrapper>
                             <IconWrapper name="IconMegaphoneSmallLine"></IconWrapper>
+                            <IconWrapper name="IconLinkSmallLine"></IconWrapper>
                         </div>
                     </div>
                     <!--medium-->
@@ -129,6 +130,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconMegaphoneMediumLine></IconWrapper>
                             <IconWrapper name=IconMinusMediumLine></IconWrapper>
                             <IconWrapper name=IconDiscountMediumLine></IconWrapper>
+                            <IconWrapper name="IconLinkMediumLine"></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
